# pandoc-filters

./: markdown.cabal  stack.yaml
filters/: pandoc-caption.hs  pandoc-iframe.hs  pandoc-include.hs  pandoc-sourceable.hs
lib/: Lib.hs  Selection.hs
